# rust-scrapper

./: .env  Cargo.toml
src/: data.rs  extractor.rs  invalid_websites.rs  links_to_record_details.rs  main.rs  pages_with_all_records.rs  records_data.rs  records_html.rs  scheduler.rs  scrapper.rs  tasks.rs  websites_html.rs
