[package]
name = "general-scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = { version = "0.19.3", features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "*"
anyhow = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
libsql-client = "0.32.0"
url = "2.4.1"
scraper = "0.18.1"
rand = "0.8.5"
uuid = "1.5.0"
orm_derive = { path = "../orm_derive" }
regex = "1.5.4"
sqlx = { version = "0.5", features = ["mysql", "runtime-tokio-rustls"] }

[features]
integration = []
